...
    override func viewDidLoad() {
        super.viewDidLoad()
        updateTitle()
        setupNavigationBar()
        setupCollectionView()
        collectionView.reloadData()
        self.view.accessibilityIdentifier = "DeckViewController.view"
    }
    
    private func updateTitle() {
        self.title = viewModel.deckName
    }
    
    private func setupNavigationBar() {
        self.navigationItem.rightBarButtonItem = {
            if #available(iOS 13.0, *) {
                return UIBarButtonItem(image: UIImage(systemName: "ellipsis"), style: .plain, target: self, action: #selector(self.showMenu))
            } else {
                return UIBarButtonItem(image: #imageLiteral(resourceName: "menuIcon"), style: .plain, target: self, action: #selector(self.showMenu))
            }
        }()
    }
    
...
