...
        l.sizeToFit()
        return l
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.view.accessibilityIdentifier = "MenuViewController.view"
    }
    
    private func deselectRestOfSection(for indexPath: IndexPath) {
        tableView
            .indexPathsForSelectedRows?.compactMap { $0 }
            .filter { $0.section == indexPath.section && $0.row != indexPath.row }
...
